--- a/index.html
+++ b/index.html
@@ -1,6 +1,57 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        Coucou
-    </body>
+ <!DOCTYPE html>
+<html lang="fr_FR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AssietteCréative</title>
+    <link rel="stylesheet" href="index.css">
+<body>
+
+<header>
+    <a href="index.html" class="logo"></a>
+    <nav>
+        <a href="https://essayecode.w3spaces-preview.com/HTML/Acceuil.html" target="_self" class="btn-home">Acceuil</a>
+        <a href="https://essayecode.w3spaces.com/HTML/Recette.html" target="_self">Recettes</a>
+        <a href="recherche">recherche</a>
+        <a href="contact">Contact</a>
+    </nav>
+    <a href="https://essayecode.w3spaces.com/HTML/Registre.html target="_self" class="search-btn"></a>
+    <a href="https://essayecode.w3spaces-preview.com/HTML/Login.html" target="_self" class="login-btn"> <strong>Se connecter</strong></a>
+    <a href="https://essayecode.w3spaces.com/HTML/Registre.html" target="_self" class="register-btn">s'enregistrer</a>
+</form>
+</header>
+
+<section>
+    <center>
+        <img src="https://image.noelshack.com/fichiers/2025/28/3/1752059324-capture.png" width="1300" height="700">
+    </center>
+</section>
+</form>
+
+<body>
+    <h1> A FAIRE</h1>
+    <h1>Recettes</h1>
+    <p><strong>Types de plat</strong></p>
+    <a href="index.html" class="kitchen-btn">
+        <nav>
+            <pre>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Apéritif & Cocktail</a>
+        <br>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Recettes de Pain</a>
+     <br>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Recettes de Gâteaux</a>
+     <br>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Bonbons et Fudge</a>
+     <br>
+    <a href="kitchen-button" target="_self" class="kitchen-btn">Biscuits de Noël</a>
+     <br>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Recettes de Cocktails</a>
+     <br>
+     <a href="kitchen-button" target="_self" class="kitchen-btn">Plats Principaux</a>
+     <br>
+    <a href="kitchen-button" target="_self" class="kitchen-btn">Recettes de Pâtes</a>
+     <br>
+
+
+</body>
 </html>
